--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"nodemailer": "^6.7.7",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"react-google-recaptcha-v3": "^1.10.0"
+		"react-google-recaptcha-v3": "^1.10.0",
+		"react-scripts": "^5.0.1"
 	},
 	"devDependencies": {
 		"@tailwindcss/forms": "^0.5.2",
